--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": ">=16"
   },
   "scripts": {
+    "start":"set DEBUG=app & node app.js",
+    "debug":"set DEBUG=* & node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
