--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "debug": "^4.3.4",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
@@ -24,8 +25,8 @@
   "nodemonConfig": {
     "restartable": "rs",
     "delay": 2000,
-    "env":{
-      "PORT":3000
+    "env": {
+      "PORT": 3000
     }
   }
 }
